fix checks for missing abortIndexBuild fields during oplog application

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-09-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When processing abortIndexBuild entries during secondary oplog application, the server should throw an exception if the oplog entry is missing either of the following fields:

      • indexBuildUUID
      • indexes

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: