SERVER-43192 fix abortIndexBuild parsing during secondary oplog application